RESOLVED FIXED52804
SVG Pattern doesn't take the viewBox of a referenced Pattern
https://bugs.webkit.org/show_bug.cgi?id=52804
Summary SVG Pattern doesn't take the viewBox of a referenced Pattern
Dirk Schulze
Reported 2011-01-20 05:11:46 PST
SVG Pattern doesn't take the viewBox of a referenced Pattern (referenced by xlink:href) The problem can be seen in the link above.
Attachments
Patch (28.65 KB, patch)
2011-01-20 05:29 PST, Dirk Schulze
no flags
Dirk Schulze
Comment 1 2011-01-20 05:29:29 PST
Andreas Kling
Comment 2 2011-01-20 05:58:43 PST
Comment on attachment 79586 [details] Patch LGTM.
Dirk Schulze
Comment 3 2011-01-20 06:12:05 PST
Comment on attachment 79586 [details] Patch Clearing flags on attachment: 79586 Committed r76236: <http://trac.webkit.org/changeset/76236>
Dirk Schulze
Comment 4 2011-01-20 06:12:26 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.